# serverMonitor

./: .gitignore  AGENTS.md  API.md  CONTEXT.md  Cargo.toml  README.md  TESTING.md  deploy.sh
monitor-agent/: Cargo.toml  config.toml.example
monitor-agent/src/: db.rs
monitor-dashboard/: Cargo.toml
monitor-dashboard/src/: app.rs  client.rs  main.rs
monitorAgent/: Cargo.toml  config.toml.example
monitorAgent/src/: config.rs  main.rs  metrics.rs  routes.rs
monitorDashboard/: Cargo.toml
monitorDashboard/src/: app.rs  client.rs  config.rs  tunnel.rs
monitor_agent/: Cargo.toml  config.toml
monitor_agent/src/: config.rs  db.rs  lib.rs  main.rs  metrics.rs  routes.rs
monitor_agent/tests/: api_test.rs
monitor_dashboard/: Cargo.toml  config.toml.example  install-desktop.sh  monitor_dashboard.sh
monitor_dashboard/src/: app.rs  client.rs  config.rs  lib.rs  main.rs
