[package]
name = "monitor-dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27"
egui = "0.27"
egui_plot = "0.27"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
openssh = "0.10"
chrono = "0.4"
toml = "0.8"
shellexpand = "3.1.2"
ctrlc = "3"